--- a/portfolio-frontend/src/App.css
+++ b/portfolio-frontend/src/App.css
@@ -1,38 +1,39 @@
-.App {
+
+/* 🌿 Navbar */
+.navbar {
+  background:  #ffe2d1!important;
+  padding: 15px;
+}
+
+/* 🚀 Brand Logo */
+.navbar-brand {
+  font-size: 1.8rem;
+  font-weight: bold;
+  color: #000000 !important;
+}
+
+.navbar-nav .nav-link {
+  font-size: 1.4rem;
+  color: #282827 !important;
+  transition: color 0.3s ease-in-out;
+}
+
+.navbar-nav .nav-link:hover {
+  color: #6bab90 !important; /* ✅ Moonstone */
+}
+
+.navbar-toggler {
+  border-color: #363736 !important;
+}
+h2{
+  color: #0b0c0d; /* ✅ Moonstone */
+  font-weight: bold;
+  text-transform: uppercase;
+  letter-spacing: 1px;
   text-align: center;
+  margin-bottom: 20px;
 }
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+body {
+  font-family: 'Trebuchet MS', sans-serif;
+  color: #000000;
 }
